@@ -113,8 +113,15 @@ sub set {
             }
             push @keep, $i;
         }
-        splice @$k, $start, 0+@$k, @$k[@keep];
-        splice @$v, $start, 0+@$v, @$v[@keep];
+
+        # this used to be written as
+        #   splice @$_, $start, 0+@$_, @$_[@keep]
+        # however older perls crash on attempts to splice-replace a subscript
+        # of the array currently being splice()d
+        #
+        # I can not seem to find a relevant RT or perldelta entry, but this
+        # seems to have been fixed in 5.8.7
+        @$_ = @$_[0 .. $start-1, @keep] for ($k, $v);
     }
 
     if (@_) {
