@@ -1,5 +1,6 @@
 Revision history for Perl extension Hash::MultiValue
 
+        - Fix segfaulting splice invocation on perls < 5.8.7
         - Fix uninitialized warning on older perls
 
 0.10  Sun Sep 18 12:51:49 PDT 2011
